atualização do conteúdo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Loja TipShopt</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./CSS/style.css">
     </head>
 
     <body>
@@ -21,6 +21,23 @@
                     <li><a href="">About</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href=""><i class="fa-solid fa-lock"></i></a></li>
+                </ul>
+            </nav>
+            <nav class="menu-mobile">
+                <ul>
+                    <li class="dropdown">
+                        <div class="icon">
+                            <a href=""><i class="fa-solid fa-bars"></i></a>
+                        </div>
+                        <div class="dropdown-menu">
+                            <a href="">Home</a>
+                            <a href="">Shop</a>
+                            <a href="">Blog</a>
+                            <a href="">About</a>
+                            <a href="">Contact</a>
+                            <a href=""><i class="fa-solid fa-lock"></i></a>
+                        </div>
+                    </li>
                 </ul>
             </nav>
         </header>
